# Progs

cpp_basic/algorithm/sort/: bubble_sort  bubble_sort.cpp
cpp_basic/basic/day01/: chrono_test  chrono_test.cpp  demo_01  demo_01.cpp  demo_02  demo_02.cpp  demo_03  demo_03.cpp  demo_04  demo_04.cpp  graph  graph.cpp  smart_pointer  smart_pointer.cpp  smart_pointer1  smart_pointer1.cpp
cpp_basic/basic/day02/: class_demo  class_demo.cpp  class_demo02  class_demo02.cpp  (+15 more)
cpp_basic/notes/: c_note.md
cpp_basic/projects/ultrasound_system/: CMakeLists.txt  README.md
cpp_basic/projects/ultrasound_system/docs/: architecture.md
cpp_basic/projects/ultrasound_system/qml/: main.qml
cpp_basic/projects/ultrasound_system/qml/components/: CineBar.qml  ControlButton.qml  ImageViewport.qml  ModePanel.qml  ParameterSlider.qml  PatientDialog.qml  StatusBadge.qml
cpp_basic/projects/ultrasound_system/shell/: README.md  run_asan_env.sh  run_gdb_backtrace.sh  run_smoke_test.sh  test_ultrasound_app.py
cpp_basic/projects/ultrasound_system/src/: AppController.cpp  AppController.h  CineBuffer.cpp  CineBuffer.h  ExamManager.cpp  ExamManager.h  FrameGenerator.cpp  FrameGenerator.h  ImageManager.cpp  ImageManager.h  MarkManager.cpp  MarkManager.h  PeripheralManager.cpp  PeripheralManager.h  PresetManager.cpp  PresetManager.h  SonoParameters.cpp  SonoParameters.h  StateManager.cpp  StateManager.h  UltrasoundImageProvider.cpp  UltrasoundImageProvider.h  main.cpp  qml.qrc
dl_basic/day01/: demo_01.py  fcn  fcn.cpp  unet.py
imaging/basic/: cv_image_show  cv_image_show.cpp  cv_maze  cv_maze.cpp  face_detect  face_detect.cpp  multi_object_segmentation  multi_object_segmentation.cpp  object_segmentation  qr  qr.cpp  qr_com  qr_com.cpp  qrcode  qrcode.cpp  rubiks.cpp  rubiks5x5  segmentation.cpp  snow.cpp  snowfall
imaging/projects/FaceRecHighPerf/: CMakeLists.txt  FaceRecognition.cpp  FaceRecognition.h  ObjectPool.h  ThreadPool.h  main.cpp
imaging/projects/FaceRecHighPerf/qml/: MainPage.qml
(+36 files in other folders)
